Correction on the about page spacing for tablets.

--- a/body-style.css
+++ b/body-style.css
@@ -426,7 +426,11 @@ body {
     align-self: stretch;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1150px) {
+    .page-body {
+        margin-top: 160px;
+    }
+
     .main-page-content {
         flex-direction: column;
     }
@@ -436,6 +440,7 @@ body {
     }
 
     .text-revealer {
+        margin-top: 45px;
         align-self: center;
     }
     
@@ -446,13 +451,21 @@ body {
 }
 
 @media screen and (max-width: 920px) {
-    .about-par {
-        max-width: 550px;
+    .page-body {
+        margin-top: 120px;
     }
 
     .about-image {
         max-width: 353px;
         max-height: 469px;
+    }
+
+    .text-revealer {
+        margin-top: 0px;
+    }
+
+    .about-par {
+        max-width: 550px;
     }
 }
 
